--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 
         <section class="preparation-info">
           <p class="prep-header">Preparation Time</p>
-          <ul>
-            <li>Total: Approximately 10 minutes</li>
-            <li>Preparation: 5 minutes</li>
-            <li>Cooking: 5 minutes</li>
+          <ul class="time-allocation">
+            <li><b>Total:</b>Approximately 10 minutes</li>
+            <li><b>Preparation:</b> 5 minutes</li>
+            <li><b>Cooking:</b> 5 minutes</li>
           </ul>
         </section>
 
         <section class="ingredients">
           <h2>Ingredients</h2>
-          <ul>
+          <ul class="ingredients-list">
             <li>2-3 large eggs Salt</li>
             <li>Salt, to taste</li>
             <li>Pepper, to taste</li>
@@ -66,37 +66,43 @@
           </ul>
         </section>
 
+        <hr />
+
         <section class="instructions">
           <h2>Instructions</h2>
-          <ol>
+          <ol class="prep-steps">
             <li>
-              Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-              pepper until they are well mixed. You can add a tablespoon of
-              water or milk for a fluffier texture.
+              <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
+              pinch of salt and pepper until they are well mixed. You can add a
+              tablespoon of water or milk for a fluffier texture.
             </li>
             <li>
-              Heat the pan: Place a non-stick frying pan over medium heat and
-              add butter or oil.
+              <strong>Heat the pan:</strong> Place a non-stick frying pan over
+              medium heat and add butter or oil.
             </li>
             <li>
-              Cook the omelette: Once the butter is melted and bubbling, pour in
-              the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+              <strong>Cook the omelette:</strong> Once the butter is melted and
+              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+              coat the surface.
             </li>
             <li>
-              Add fillings (optional): When the eggs begin to set at the edges
-              but are still slightly runny in the middle, sprinkle your chosen
-              fillings over one half of the omelette.
+              <strong>Add fillings (optional):</strong> When the eggs begin to
+              set at the edges but are still slightly runny in the middle,
+              sprinkle your chosen fillings over one half of the omelette.
             </li>
             <li>
-              Fold and serve: As the omelette continues to cook, carefully lift
-              one edge and fold it over the fillings. Let it cook for another
-              minute, then slide it onto a plate.
+              <strong>Fold and serve:</strong> As the omelette continues to
+              cook, carefully lift one edge and fold it over the fillings. Let
+              it cook for another minute, then slide it onto a plate.
             </li>
             <li>
-              Enjoy: Serve hot, with additional salt and pepper if needed.
+              <strong>Enjoy:</strong> Serve hot, with additional salt and pepper
+              if needed.
             </li>
           </ol>
         </section>
+
+        <hr />
 
         <section class="nutritional-facts">
           <h2>Nutrition</h2>
