--- a/index.html
+++ b/index.html
@@ -110,12 +110,32 @@
             The table below shows nutritional values per serving without the
             additional fillings.
           </p>
+          <div class="nutrition-data">
+            <div>
+              <p>Calories</p>
+              <p>277kcal</p>
+            </div>
+            <hr />
+            <div>
+              <p>Carbs</p>
+              <p>0g</p>
+            </div>
+            <hr />
+            <div>
+              <p>Protein</p>
+              <p>20g</p>
+            </div>
+            <hr />
+            <div>
+              <p>Fat</p>
+              <p>22g</p>
+            </div>
+          </div>
         </section>
       </div>
     </article>
-    <!-- Simple Omelette Recipe. Preparation time
-      
-    Ingredients 2-3 large eggs     Instructions       Nutrition 
-    Calories 277kcal Carbs 0g Protein 20g Fat 22g -->
+    <!--   
+     Nutrition 
+    -->
   </body>
 </html>
