updates to layout and styling

--- a/index.html
+++ b/index.html
@@ -112,23 +112,23 @@
           </p>
           <div class="nutrition-data">
             <div>
-              <p>Calories</p>
-              <p>277kcal</p>
+              <p class="data-col1">Calories</p>
+              <p class="data-col2">277kcal</p>
             </div>
             <hr />
             <div>
-              <p>Carbs</p>
-              <p>0g</p>
+              <p class="data-col1">Carbs</p>
+              <p class="data-col2">0g</p>
             </div>
             <hr />
             <div>
-              <p>Protein</p>
-              <p>20g</p>
+              <p class="data-col1">Protein</p>
+              <p class="data-col2">20g</p>
             </div>
             <hr />
             <div>
-              <p>Fat</p>
-              <p>22g</p>
+              <p class="data-col1">Fat</p>
+              <p class="data-col2">22g</p>
             </div>
           </div>
         </section>
