--- a/index.html
+++ b/index.html
@@ -28,114 +28,113 @@
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
-    <article class="recipe-page">
-      <img
-        class="dish-image"
-        src="./assets/images/image-omelette.jpeg"
-        alt="image of an omelette"
-      />
-      <div class="recipe-details">
-        <section class="recipe-summary">
-          <h1>Simple Omelette Recipe</h1>
-          <p class="about-recipe">
-            An easy and quick dish, perfect for any meal. This classic omelette
-            combines beaten eggs cooked to perfection, optionally filled with
-            your choice of cheese, vegetables, or meats.
-          </p>
-        </section>
+    <main>
+      <article class="recipe-page">
+        <img
+          class="dish-image"
+          src="./assets/images/image-omelette.jpeg"
+          alt="image of an omelette"
+        />
+        <div class="recipe-details">
+          <section class="recipe-summary">
+            <h1>Simple Omelette Recipe</h1>
+            <p class="about-recipe">
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+            </p>
+          </section>
 
-        <section class="preparation-info">
-          <p class="prep-header">Preparation Time</p>
-          <ul class="time-allocation">
-            <li><b>Total:</b>Approximately 10 minutes</li>
-            <li><b>Preparation:</b> 5 minutes</li>
-            <li><b>Cooking:</b> 5 minutes</li>
-          </ul>
-        </section>
+          <section class="preparation-info">
+            <p class="prep-header">Preparation Time</p>
+            <ul class="time-allocation">
+              <li><b>Total:</b>Approximately 10 minutes</li>
+              <li><b>Preparation:</b> 5 minutes</li>
+              <li><b>Cooking:</b> 5 minutes</li>
+            </ul>
+          </section>
 
-        <section class="ingredients">
-          <h2>Ingredients</h2>
-          <ul class="ingredients-list">
-            <li>2-3 large eggs Salt</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
-        </section>
+          <section class="ingredients">
+            <h2>Ingredients</h2>
+            <ul class="ingredients-list">
+              <li>2-3 large eggs Salt</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </section>
 
-        <hr />
+          <hr />
 
-        <section class="instructions">
-          <h2>Instructions</h2>
-          <ol class="prep-steps">
-            <li>
-              <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
-              pinch of salt and pepper until they are well mixed. You can add a
-              tablespoon of water or milk for a fluffier texture.
-            </li>
-            <li>
-              <strong>Heat the pan:</strong> Place a non-stick frying pan over
-              medium heat and add butter or oil.
-            </li>
-            <li>
-              <strong>Cook the omelette:</strong> Once the butter is melted and
-              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
-              coat the surface.
-            </li>
-            <li>
-              <strong>Add fillings (optional):</strong> When the eggs begin to
-              set at the edges but are still slightly runny in the middle,
-              sprinkle your chosen fillings over one half of the omelette.
-            </li>
-            <li>
-              <strong>Fold and serve:</strong> As the omelette continues to
-              cook, carefully lift one edge and fold it over the fillings. Let
-              it cook for another minute, then slide it onto a plate.
-            </li>
-            <li>
-              <strong>Enjoy:</strong> Serve hot, with additional salt and pepper
-              if needed.
-            </li>
-          </ol>
-        </section>
+          <section class="instructions">
+            <h2>Instructions</h2>
+            <ol class="prep-steps">
+              <li>
+                <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed. You can add
+                a tablespoon of water or milk for a fluffier texture.
+              </li>
+              <li>
+                <strong>Heat the pan:</strong> Place a non-stick frying pan over
+                medium heat and add butter or oil.
+              </li>
+              <li>
+                <strong>Cook the omelette:</strong> Once the butter is melted
+                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </li>
+              <li>
+                <strong>Add fillings (optional):</strong> When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </li>
+              <li>
+                <strong>Fold and serve:</strong> As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+              </li>
+              <li>
+                <strong>Enjoy:</strong> Serve hot, with additional salt and
+                pepper if needed.
+              </li>
+            </ol>
+          </section>
 
-        <hr />
+          <hr />
 
-        <section class="nutritional-facts">
-          <h2>Nutrition</h2>
-          <p>
-            The table below shows nutritional values per serving without the
-            additional fillings.
-          </p>
-          <div class="nutrition-data">
-            <div>
-              <p class="data-col1">Calories</p>
-              <p class="data-col2">277kcal</p>
+          <section class="nutritional-facts">
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <div class="nutrition-data">
+              <div>
+                <p class="data-col1">Calories</p>
+                <p class="data-col2">277kcal</p>
+              </div>
+              <hr />
+              <div>
+                <p class="data-col1">Carbs</p>
+                <p class="data-col2">0g</p>
+              </div>
+              <hr />
+              <div>
+                <p class="data-col1">Protein</p>
+                <p class="data-col2">20g</p>
+              </div>
+              <hr />
+              <div>
+                <p class="data-col1">Fat</p>
+                <p class="data-col2">22g</p>
+              </div>
             </div>
-            <hr />
-            <div>
-              <p class="data-col1">Carbs</p>
-              <p class="data-col2">0g</p>
-            </div>
-            <hr />
-            <div>
-              <p class="data-col1">Protein</p>
-              <p class="data-col2">20g</p>
-            </div>
-            <hr />
-            <div>
-              <p class="data-col1">Fat</p>
-              <p class="data-col2">22g</p>
-            </div>
-          </div>
-        </section>
-      </div>
-    </article>
-    <!--   
-     Nutrition 
-    -->
+          </section>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
